--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/omnia-23/Egyptian_Party#readme",
   "dependencies": {
     "bootstrap": "^5.3.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "web-fonts": "^1.19.0"
   }
 }
